# pulldown-cmark

./: .gitattributes  .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  archive.sh  azure-pipelines.yml  build.rs  config.toml  split_spec.py  target.txt  test.py
.github/workflows/: book.yml  release.yaml  rust.yml
README.mdpulldown-cmark/: README.md
bench/: Cargo.toml  flamegraph.sh
bench/benches/: html_rendering.rs  lib.rs  markdown-it.rs
benches/: html_rendering.rs  lib.rs  markdown-it.rs  spec.rs
c-api/: Cargo.toml
c-api/include/: pulldown-cmark.h
c-api/src/: lib.rs
c-api/tests/: Cargo.toml  build.rs
c-api/tests/src/: main.rs  test.c  test.h  test_markdown_render.c  test_util.h
dos-fuzzer/: .gitignore  Cargo.toml  README.md  plot  run
dos-fuzzer/src/: literals.rs  main.rs  scoring.rs
examples/: alt-html.rs  broken-link-callbacks.rs  event-filter.rs  events.rs  footnote-rewrite.rs  parser-map-event-print.rs  parser-map-tag-print.rs  string-to-string.rs
fancy-regex/: Cargo.toml  README.md
fancy-regex/benches/: bench.rs
fancy-regex/examples/: toy.rs
fancy-regex/src/: analyze.rs  compile.rs  lib.rs  parse.rs  vm.rs
find_exponential/: Cargo.toml  retest-output  run
find_exponential/src/: black_box.rs  literals.rs  main.rs  scoring.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: commonmark_js.rs  pandoc.rs  parse.rs
fuzz/src/: lib.rs
fuzzer/: Cargo.toml  README.md  group-panics  retest-output  run
fuzzer/src/: clock.rs  literals.rs  main.rs  scoring.rs
guide/: .gitignore  README.md  book.toml  deploy.rs  prepare-demo.rs  prepare-specs.rs
guide/demo/: Cargo.toml  README.md
guide/demo/src/: lib.rs
guide/src/: .gitignore  SUMMARY.md  cheat-sheet.md  demo.md  index.md  preview.html  specs.md
guide/src/dev/: block-parsing.md  extensions.md  html-generation.md  index.md  inline-processing.md  performance.md  string-handling.md
guide/src/examples/: broken-link-callbacks.md  event-filter.md  events.md  footnote-rewrite.md  index.md  normalize-wikilink.md  parser-map-event-print.md  parser-map-tag-print.md  string-to-string.md  wikilink-prefix.md
guide/theme/: head.hbs
pulldown-cmark/: Cargo.toml  build.rs
pulldown-cmark-escape/: Cargo.toml  README.md
pulldown-cmark-escape/src/: lib.rs
pulldown-cmark-lib/: Cargo.toml
pulldown-cmark-lib/examples/: parser-map-event-print.rs
pulldown-cmark-lib/specs/: footnotes.txt  heading_attrs.txt  old_footnotes.txt
pulldown-cmark-lib/src/: html.rs  parse.rs  strings.rs
pulldown-cmark-lib/tests/: lib.rs
pulldown-cmark-lib/tests/suite/: gfm_table.rs  metadata_blocks.rs
pulldown-cmark/benches/: lib.rs
pulldown-cmark/examples/: broken-link-callbacks.rs  event-filter.rs  footnote-rewrite.rs  normalize-wikilink.rs  parser-map-event-print.rs  parser-map-tag-print.rs  string-to-string.rs  wikilink-prefix.rs
pulldown-cmark/fuzzer/src/: main.rs
pulldown-cmark/specs/: blockquotes_tags.txt  cjk_friendly_emphasis.txt  code_block_attrs.txt  container_extensions.txt  definition_lists.txt  footnotes.txt  highlight.txt  inline_link_attrs.txt  math.txt  metadata_blocks.txt  old_footnotes.txt  regression.txt  spoiler.txt  strikethrough.txt  super_sub.txt  table_captions.txt  wikilinks.txt
pulldown-cmark/src/: cjk.rs  entities.rs  firstpass.rs  html.rs  lib.rs  linklabel.rs  main.rs  parse.rs  scanners.rs  strings.rs  tree.rs  utils.rs
pulldown-cmark/src/html/: default.rs  element_renderer.rs  event_processor.rs  mod.rs
pulldown-cmark/tests/: errors.rs  html.rs  lib.rs  serde.rs
pulldown-cmark/tests/suite/: blockquotes_tags.rs  cjk_friendly_emphasis.rs  code_block_attrs.rs  container_extensions.rs  definition_lists.rs  footnotes.rs  gfm_strikethrough.rs  gfm_table.rs  gfm_tasklist.rs  heading_attrs.rs  highlight.rs  inline_link_attrs.rs  math.rs  metadata_blocks.rs  mod.rs  old_footnotes.rs  regression.rs  smart_punct.rs  spec.rs  spoiler.rs  strikethrough.rs  super_sub.rs  table.rs  table_captions.rs  wikilinks.rs
pulldown-cmark/tools/: mk_puncttable.py
specs/: footnotes.txt  gfm_footnotes.txt  heading_attrs.txt  math.txt  metadata_blocks.txt  old_footnotes.txt  regression.txt  spec-0.26.txt  spec-v027.txt  standard-footnotes.txt  standard_footnotes.txt  table.txt  table_spec.txt
specs/future/: math.txt
src/: entities.rs  escape.rs  firstpass.rs  html.rs  lib.rs  linklabel.rs  main.rs  parse.rs  passes.rs  prototype.rs  puncttable.rs  scanners.rs  simd.rs  strings.rs  text.rs  tree.rs  utils.rs
tests/: disable_html.rs  errors.rs  footnotes.rs  gfm_strikethrough.rs  gfm_table.rs  gfm_tasklist.rs  html.rs  lib.rs  math.rs  normalize_html.rs  normalize_html.rs.inc  options.rs  regression.rs  serde.rs  spec-v027.rs  spec.rs  table.rs  text.rs
tests/suite/: footnotes.rs  gfm_footnotes.rs  gfm_strikethrough.rs  gfm_table.rs  gfm_tasklist.rs  heading_attrs.rs  math.rs  metadata_blocks.rs  mod.rs  old_footnotes.rs  regression.rs  slack.rs  smart_punct.rs  spec.rs  standard_footnotes.rs  table.rs
tools/: mk_entities.py  mk_puncttable.py
