[package]
name = "pulldown-cmark"
version = "0.9.3"
authors = [ "Raph Levien <raph.levien@gmail.com>", "Marcus Klaas de Vries <mail@marcusklaas.nl>" ]
license = "MIT"
description = "A pull parser for CommonMark"
repository = "https://github.com/raphlinus/pulldown-cmark"
keywords = ["markdown", "commonmark"]
categories = ["text-processing"]
edition = "2021"
readme = "README.md"
exclude = ["/third_party/**/*", "/tools/**/*", "/specs/**/*", "/fuzzer/**/*", "/azure-pipelines.yml"]

build = "build.rs"

[[bin]]
name = "pulldown-cmark"
required-features = ["getopts"]
doc = false

[[bench]]
name = "html_rendering"
harness = false

[[bench]]
name = "lib"
harness = false

[[bench]]
name = "markdown-it"
harness = false

[dependencies]
bitflags = "1.3"
unicase = "2.6"
memchr = "2.5"
getopts = { version = "0.2", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
html5ever = "0.26"
markup5ever_rcdom = "0.2"
lazy_static = "1.4"
tendril = "0.4"
criterion = "0.3"
regex = "1.6"
serde_json = "1.0.61"
bincode = "1.3.1"

[features]
default = ["getopts"]
gen-tests = []
simd = []
