[package]
name = "fancy-regex"
version = "0.0.0"
authors = ["Raph Levien <raph@google.com>"]
license = "MIT"
description = "An implementation of regexes, supporting a relatively rich set of features, including backreferences and look-around."
repository = "https://github.com/google/pulldown-cmark"

[dependencies]
regex = "0.1.62"
bit-set = "0.4"
lazy_static = "0.1.15"
memchr = "0.1.10"
