[package]
name = "fuzzer"
version = "0.1.0"
authors = ["oberien <jaro.fietz@gmx.de>"]
edition = "2018"

[dependencies]
syn = { version = "0.15.33", features = ["full"] }
itertools = "0.8.0"
walkdir = "2.2.7"
pulldown-cmark = { path = ".." }
ndarray = "0.12.1"
ndarray-stats = "0.2.0"
rand = "0.6.5"
rand_xoshiro = "0.1.0"
num_cpus = "1.10.0"
crossbeam-utils = "0.6.5"
libc = "0.2.54"

[profile.release]
debug = true
