[package]
name = "fuzzer"
version = "0.1.0"
authors = ["oberien <jaro.fietz@gmx.de>"]
edition = "2018"

[dependencies]
syn = { version = "0.15", features = ["full"] }
itertools = "0.8"
walkdir = "2.2"
pulldown-cmark = { path = ".." }
ndarray = "0.12"
ndarray-stats = "0.2"
rand = "0.7"
rand_xoshiro = "0.4"
num_cpus = "1.10"
crossbeam-utils = "0.8"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "3.0.0-beta.2"

[profile.release]
lto = "fat"