[package]
name = "fuzzer"
version = "0.1.0"
authors = ["oberien <jaro.fietz@gmx.de>"]
edition = "2018"

[dependencies]
syn = { version = "2", features = ["full", "visit"] }
itertools = "0.10"
walkdir = "2.5"
pulldown-cmark = { path = "../pulldown-cmark" }
ndarray = "0.15"
ndarray-stats = "0.5"
rand = "0.8"
rand_xoshiro = "0.6"
num_cpus = "1.16"
crossbeam-utils = "0.8"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.3", features = ["derive"] }

[profile.release]
lto = "fat"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]
