[package]
name = "pulldown-cmark-escape"
version = "0.10.1"
authors = [
    "Raph Levien <raph.levien@gmail.com>",
    "Marcus Klaas de Vries <mail@marcusklaas.nl>",
]
license = "MIT"
description = "An escape library for HTML created in the pulldown-cmark project"
repository = "https://github.com/raphlinus/pulldown-cmark"
keywords = ["escape", "html", "markdown", "commonmark"]
categories = ["text-processing"]
edition = "2021"
rust-version = "1.70" # Update README.md and GitHub action when changing this
readme = "./README.md"

[features]
simd = []
