[package]
name = "pulldown-cmark"
version = "0.11.0"
authors = [
    "Raph Levien <raph.levien@gmail.com>",
    "Marcus Klaas de Vries <mail@marcusklaas.nl>",
]
license = "MIT"
description = "A pull parser for CommonMark"
repository = "https://github.com/raphlinus/pulldown-cmark"
keywords = ["markdown", "commonmark"]
categories = ["text-processing"]
edition = "2021"
rust-version = "1.74.0" # Update README.md and GitHub action when changing this
readme = "../README.md"
 
[[bin]]
name = "pulldown-cmark"
required-features = ["getopts"]
doc = false

[dependencies]
getopts = { version = "0.2", optional = true }
pulldown-cmark-lib = { path = "../pulldown-cmark-lib", version = "0.11" }

[dev-dependencies]
lazy_static = "1.4"
criterion = "0.5"
regex = "1.6"
serde_json = "1.0.61"
bincode = "1.3.1"

[features]
default = ["getopts", "html"]
gen-tests = []
simd = ["pulldown-cmark-lib/simd"]
html = ["pulldown-cmark-lib/html"]
