[package]
name = "pulldown-cmark-demo"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
pulldown-cmark = { path = "../../pulldown-cmark", default-features = false, features = ["hashbrown", "html"] }
dlmalloc = { version = "0.2.13", features = ["global"] }
